--- a/sass/features.scss
+++ b/sass/features.scss
@@ -2,39 +2,56 @@
   border: 1px solid #ededed;
   margin-top: 30px;
 }
+.features {
+  padding: 0 30px 0 30px;
+}
+.features-video {
+  padding: 0 30px 0 30px;
+}
 .features__type:hover {
   box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.6);
 }
+
 .features__type:active {
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.6);
 }
-.features__type img {
 
-}
-
-.features__type b {
+.features__data a {
   display: block;
   width: 260px;
   padding-left: 30px;
   margin-top: 25px;
+  font-size: 17px;
+  font-weight: 600;
+  line-height: 24px;
+  text-decoration: none;
+  color: #000000;
+}
 
+.features__price {
+  display: block;
+  width: 260px;
+  padding-left: 30px;
+  margin-top: 25px;
   font-size: 17px;
   font-weight: 600;
   line-height: 24px;
 }
-.features__type span {
+
+.features__params {
   padding-left: 30px;
   margin-top: 25px;
   color: #444444;
   font-size: 13px;
-
   line-height: 30px;
 }
+
 .features__bottom {
   position: relative;
   margin-bottom: 30px;
   padding-top: 30px;
 }
+
 .features__bottom::after {
   content: "";
   border-bottom: 1px solid #ededed;
