--- a/sass/main-nav.scss
+++ b/sass/main-nav.scss
@@ -1,14 +1,16 @@
 
 
 .main-nav__links {
-  display: block;
-  margin-left: -30px;
+  display: none;
+  margin-left: 0px;
   list-style: none;
-   margin-top: 0;
+   margin-top: 32px;
   margin-bottom: 0;
   position: absolute;
   z-index: 1;
+  padding-left: 0px;
   background-color: #fff;
+
 }
 
 .main-nav__link a:hover {
@@ -28,11 +30,12 @@
   line-height: 24px;
   text-align: left;
   padding: 30px 0px 30px 75px;
-  border: 1px solid #ececec;
+
   border-left: 0;
   border-right: 0;
   border-bottom: 0;
-  width: 235px;
+  width: 245px;
+
 }
 .main-nav__switch {
   display: block;
